--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,8 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # Fast reloading
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -28,6 +30,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # Enabled mouse
 set-option -g mouse on
 
@@ -37,7 +42,8 @@ set -g history-limit 999999999
 # TPM initialization
 run '~/.tmux/plugins/tpm/tpm' 
 
+set-option -g set-clipboard on
+
 set -g status-interval 2
 
 set -g status-left "#[fg=black]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --powerline-left --interval 2)#[default]"
-
