--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,11 @@ bind -r L resize-pane -R 5
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDown1Pane select-pane \;\
+  send-keys -X copy-pipe "pbcopy" \;\
+  send-keys -X clear-selection
+
 # Enabled mouse
 set-option -g mouse on
 
