update. last stable version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,12 @@
+# TPM initialization
+run '~/.tmux/plugins/tpm/tpm' 
+
 # PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/block/cyan'
-
-set -g @plugin 'tmux-plugins/tmux-battery'
-
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -44,11 +43,9 @@ set-option -g mouse on
 # History
 set -g history-limit 999999999
 
-# TPM initialization
-run '~/.tmux/plugins/tpm/tpm' 
-
 set-option -g set-clipboard on
 
 set -g status-interval 2
 
-set -g status-left "#[fg=black]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --powerline-left --interval 2)#[default]"
+set -g default-terminal "xterm-kitty"
+set-option -sa terminal-features ',xterm-kitty:RGB'
