improved tmux directory modes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-# TPM initialization
-run '~/.tmux/plugins/tpm/tpm' 
 
 # PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
@@ -29,6 +27,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Persist current directory when creating new window
+bind c new-window -c "#{pane_current_path}"
+
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
@@ -49,3 +50,8 @@ set -g status-interval 2
 
 set -g default-terminal "xterm-kitty"
 set-option -sa terminal-features ',xterm-kitty:RGB'
+
+
+
+# TPM initialization
+run '~/.tmux/plugins/tpm/tpm' 
