--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,15 +42,17 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \;\
 set-option -g mouse on
 
 # History
-set -g history-limit 999999999
+# set -g history-limit 999999999
 
 set-option -g set-clipboard on
 
 set -g status-interval 2
 
-set -g default-terminal "xterm-kitty"
-set-option -sa terminal-features ',xterm-kitty:RGB'
+# set -g default-terminal "xterm-kitty"
+# set-option -sa terminal-features ',xterm-kitty:RGB'
 
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB,xterm-256color:RGB,gnome*:RGB"
 
 
 # TPM initialization
