--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,12 +48,11 @@ set-option -g set-clipboard on
 
 set -g status-interval 2
 
-# set -g default-terminal "xterm-kitty"
+#set -g default-terminal "xterm-kitty"
 # set-option -sa terminal-features ',xterm-kitty:RGB'
 
-set  -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",alacritty:RGB,xterm-256color:RGB,gnome*:RGB"
-
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",alacritty:RGB,xterm-256color:RGB,gnome*:RGB,tmux-256color:RGB"
 
 # TPM initialization
 run '~/.tmux/plugins/tpm/tpm' 
