--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,15 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/block/cyan'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
+# set -g @plugin 'jimeh/tmux-themepack'
+# set -g @themepack 'powerline/block/cyan'
+
+set -g @plugin 'catppuccin/tmux#v2.1.2'
+
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Fast reloading
@@ -27,9 +33,6 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# Persist current directory when creating new window
-bind c new-window -c "#{pane_current_path}"
-
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
@@ -41,18 +44,36 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \;\
 # Enabled mouse
 set-option -g mouse on
 
-# History
-# set -g history-limit 999999999
-
 set-option -g set-clipboard on
 
 set -g status-interval 2
 
-#set -g default-terminal "xterm-kitty"
-# set-option -sa terminal-features ',xterm-kitty:RGB'
-
 set -g default-terminal "xterm-256color"
 set -ag terminal-overrides ",alacritty:RGB,xterm-256color:RGB,gnome*:RGB,tmux-256color:RGB"
 
+# Without this cpu / battery doesn't load
+run ~/.tmux/plugins/tmux/catppuccin.tmux
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_date_time_text " %H:%M:%S"
+
+set -g status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
+
+set -g @catppuccin_window_current_text " #{?#{==:#W,zsh},#(basename #{pane_current_path}),#W}"
+set -g @catppuccin_window_text " #{?#{==:#W,zsh},#(basename #{pane_current_path}),#W}"
+
+bind C-f display-popup -E "tms"
+bind C-j display-popup -E "tms switch"
+bind C-w command-prompt -p "Rename active session to: " "run-shell 'tms rename %1'"
+bind C-r "run-shell 'tms refresh'"
+
 # TPM initialization
-run '~/.tmux/plugins/tpm/tpm' 
+run '~/.tmux/plugins/tpm/tpm'
